# iam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  ui.rs
server/src/api/: middleware.rs  mod.rs  utils.rs
server/src/api/v1/: auth.rs  config.rs  extractors.rs  mod.rs  user.rs
server/src/db/: interface.rs  mod.rs
server/src/db/clients/: mod.rs
server/src/db/clients/sqlite/: mod.rs  tests.rs
server/src/db/clients/sqlite/migrations/: 20250630051402_initial_setup.sql
server/src/db/clients/sqlite/tests/: mod.rs
server/src/db/clients/sqlite/tests/resources/: passkey-incremented.json  passkey.json
server/src/models/: config.rs  json.rs  mod.rs  passkey.rs  session.rs  tag.rs  user.rs
ui/: package.json  pnpm-lock.yaml  svelte.config.js
ui/src/lib/: app-config.ts  logic.ts  models.ts
ui/src/lib/components/: app-sidebar.svelte  login-form.svelte  sidebar-nav-user.svelte  up-down-grade-dropdown-item.svelte
ui/src/lib/components/sidebar-pieces/: user.svelte
ui/src/lib/components/ui/button/: button.svelte
ui/src/lib/components/ui/input/: input.svelte
ui/src/lib/components/ui/sidebar/: sidebar-inset.svelte  sidebar-menu-button.svelte
ui/src/lib/components/ui/tooltip/: tooltip-trigger.svelte
ui/src/routes/: +layout.svelte  +layout.ts
ui/src/routes/(app)/: +layout.svelte  +layout.ts
ui/src/routes/(app)/home/: +layout.svelte
ui/src/routes/(app)/logout/: +page.svelte
ui/src/routes/home/: +layout.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/logout/: +page.svelte
ui/src/routes/register/: +page.svelte
webauthn-rs/: Cargo.toml  README.md
webauthn-rs/base64urlsafedata/: Cargo.toml
webauthn-rs/base64urlsafedata/src/: common.rs
webauthn-rs/webauthn-rs/: Cargo.toml
webauthn-rs/webauthn-rs-core/: Cargo.toml
webauthn-rs/webauthn-rs-proto/: Cargo.toml
webauthn-rs/webauthn-rs-proto/src/: attest.rs  auth.rs  extensions.rs  options.rs
