[workspace]
members = ["server"]
exclude = ["webauthn-rs"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Kian Kasad <kian@kasad.com>"]
description = "IAM web application with user management and OIDC integration"
license = "MIT"
repository = "https://github.com/kdkasad/iam"
readme = "README.md"
