[package]
name = "iam-server"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "fs"] }
tracing = "0.1.41"
