[package]
name = "iam-server"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "fs"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }
