[package]
name = "iam-server"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "fs"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs"] }
tower = "0.5.2"
webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
blake3 = { version = "1.8.2", features = ["serde"] }
rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }

[dev-dependencies]
serde_json = "1.0.140"
